--- a/index.html
+++ b/index.html
@@ -21,18 +21,26 @@
 
         <nav class="nav">
           <ul class="nav-list">
-            <li nav-item><a href="">Studio</a></li>
-            <li nav-item><a href="">Portfolio</a></li>
-            <li nav-item><a href="">Contacts</a></li>
+            <li class="nav-item">
+              <a href="" class="nav-link active">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="nav-link">Portfolio</a>
+            </li>
+            <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
           </ul>
         </nav>
         <address class="address-wrap">
           <ul class="address-list">
             <li class="address-item">
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="address-link"
+                >info@devstudio.com</a
+              >
             </li>
             <li class="address-item">
-              <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+              <a href="tel:+110001111111" class="address-link"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
@@ -44,7 +52,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="btn-order btn">Order Service</button>
+          <button type="button" class="btn-order btn" data-modal-open>Order Service</button>
         </div>
       </section>
 
@@ -377,5 +385,17 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-icon">
+            <use href="./img/icons.svg#icon-x"></use>
+          </svg>
+        </button>
+        <h2 class="modal-title">Leave your contacts and we will call you back</h2>
+        <button type="button" class="modal-send-btn btn">Send</button>
+      </div>
+    </div>
+     <script src="./js/modal.js"></script>
   </body>
 </html>
