--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="btn-order btn" data-modal-open>Order Service</button>
+          <button type="button" class="btn-order btn" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -350,25 +352,25 @@
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a href="https://www.instagram.com/" target="_blank"
-                ><svg class="team-social-icon" width="16" height="16">
+                ><svg class="team-social-icon" width="24" height="24">
                   <use href="./img/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="https://www.facebook.com/" target="_blank"
-                ><svg class="team-social-icon" width="16" height="16">
+                ><svg class="team-social-icon" width="24" height="24">
                   <use href="./img/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="https://www.twitter.com/" target="_blank"
-                ><svg class="team-social-icon" width="16" height="16">
+                ><svg class="team-social-icon" width="24" height="24">
                   <use href="./img/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="https://www.linkedin.com/" target="_blank"
-                ><svg class="team-social-icon" width="16" height="16">
+                ><svg class="team-social-icon" width="24" height="24">
                   <use href="./img/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
@@ -378,24 +380,65 @@
         <div class="footer-third-list">
           <h3 class="footer-title">Subscribe</h3>
           <div class="footer-forth-list">
-            <input type="email" name="Email" id="" class="footer-input" />
-          </div>
+            <input
+              type="email"
+              name="Email"
+              id=""
+              class="footer-input"
+              placeholder="E-mail"
+            />
 
-          <button type="button" class="btn subscribe-btn">Subscribe</button>
+            <button type="submit" class="btn subscribe-btn">Subscribe</button>
+          </div>
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-icon">
             <use href="./img/icons.svg#icon-x"></use>
           </svg>
         </button>
-        <h2 class="modal-title">Leave your contacts and we will call you back</h2>
-        <button type="button" class="modal-send-btn btn">Send</button>
+        <form action="" class="modal-form">
+          <h2 class="modal-title">
+            Leave your contacts and we will call you back
+          </h2>
+          <label class="input-title">Name </label>
+          <div class="input-wrap">
+            <input type="text" class="modal-input text-input" />
+            <svg class="input-icon">
+              <use href="./img/icons.svg#icon-person"></use>
+            </svg>
+          </div>
+
+          <label class="input-title"
+            >Phone<input type="tel" class="modal-input"
+          /></label>
+          <label class="input-title"
+            >Email<input type="mail" class="modal-input"
+          /></label>
+          <label class="input-title"
+            >Comment<textarea
+              class="modal-textarea modal-input"
+              name=""
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <div class="privacy-wrap">
+            <input
+              id="checkbox-modal"
+              type="checkbox"
+              class="checkbox-modal is-hidden"
+            /><label for="checkbox-modal" class="input-title checkbox-title"
+              >I accept the terms and conditions of the &nbsp;
+              <a href="" class="privacy-link">Privacy Policy</a></label
+            >
+          </div>
+          <button type="submit" class="modal-send-btn btn">Send</button>
+        </form>
       </div>
     </div>
-     <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
