--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,9 @@
 
         <nav class="nav">
           <ul class="nav-list">
-            <li class="nav-item"><a href="./index.html" class="nav-link active">Studio</a></li>
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link active">Studio</a>
+            </li>
             <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
             <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
           </ul>
@@ -29,10 +31,14 @@
         <address class="address-wrap">
           <ul class="address-list">
             <li class="address-item">
-              <a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="address-link"
+                >info@devstudio.com</a
+              >
             </li>
             <li class="address-item">
-              <a href="tel:+110001111111" class="address-link">+11 (000) 111-11-11</a>
+              <a href="tel:+110001111111" class="address-link"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
@@ -40,110 +46,169 @@
     </header>
 
     <main>
-<section class="section section-portfolio">
-    <div class="container">
-  <ul class="filtr-list">
-    <li class="filtr-item"><a href="" class="filtr-link">All</a></li>
-    <li class="filtr-item"><a href="" class="filtr-link">Web Site</a></li>
-    <li class="filtr-item"><a href="" class="filtr-link">App</a></li>
-    <li class="filtr-item"><a href="" class="filtr-link">Design</a></li>
-    <li class="filtr-item"><a href="" class="filtr-link">Marketing</a></li>
-  </ul>
+      <section class="section section-portfolio">
+        <div class="container">
+          <ul class="filtr-list">
+            <li class="filtr-item"><a href="" class="filtr-link">All</a></li>
+            <li class="filtr-item">
+              <a href="" class="filtr-link">Web Site</a>
+            </li>
+            <li class="filtr-item"><a href="" class="filtr-link">App</a></li>
+            <li class="filtr-item"><a href="" class="filtr-link">Design</a></li>
+            <li class="filtr-item">
+              <a href="" class="filtr-link">Marketing</a>
+            </li>
+          </ul>
 
-  <ul class="portfolio-list">
-    <li class="portfolio-item">
-        <div class="portfolio-desc-wrap">
-            <img src="./img/img-1.jpg" width="360" alt="Banking App Interface Concept">
-            <p class="portfolio-item-desc">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <div class="portfolio-desc-wrap">
+                <img
+                  src="./img/img-1.jpg"
+                  width="360"
+                  alt="Banking App Interface Concept"
+                />
+                <p class="portfolio-item-desc">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-text-wrap">
+                <h2 class="item-title">Banking App Interface Concept</h2>
+                <p class="item-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <div class="portfolio-desc-wrap">
+                <img src="./img/img-2.jpg" width="360" alt="Cashless Payment" />
+                <p class="portfolio-item-desc">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Ipsa, modi.
+                </p>
+              </div>
+              <div class="portfolio-text-wrap">
+                <h2 class="item-title">Cashless Payment</h2>
+                <p class="item-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <div class="portfolio-desc-wrap">
+                <img src="./img/img-3.jpg" width="360" alt="Meditaion App" />
+                <p class="portfolio-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Exercitationem quis modi est, perspiciatis molestias odit
+                  voluptate sed hic mollitia voluptates!
+                </p>
+              </div>
+              <div class="portfolio-text-wrap">
+                <h2 class="item-title">Meditaion App</h2>
+                <p class="item-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <div class="portfolio-desc-wrap">
+                <img src="./img/img-4.jpg" width="360" alt="Taxi Service" />
+                <p class="portfolio-item-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                  reiciendis eligendi hic laudantium fugit quidem.
+                </p>
+              </div>
+              <div class="portfolio-text-wrap">
+                <h2 class="item-title">Taxi Service</h2>
+                <p class="item-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <div class="portfolio-desc-wrap">
+                <img
+                  src="./img/img-5.jpg"
+                  width="360"
+                  alt="Screen Illustrations"
+                />
+                <p class="portfolio-item-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
+                  odit quaerat, corrupti aspernatur possimus nemo architecto.
+                  Illo omnis, quo mollitia aut consectetur culpa esse quidem cum
+                  ipsum ea, placeat ut?
+                </p>
+              </div>
+              <div class="portfolio-text-wrap">
+                <h2 class="item-title">Screen Illustrations</h2>
+                <p class="item-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <div class="portfolio-desc-wrap">
+                <img src="./img/img-6.jpg" width="360" alt="Online Courses" />
+                <p class="portfolio-item-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repellendus assumenda doloribus hic magni aperiam
+                  necessitatibus atque eveniet dicta asperiores, consequatur
+                  corporis eos nam qui quasi dignissimos eaque incidunt
+                  blanditiis soluta veniam? Tenetur, doloribus ab eius, aliquam
+                  excepturi corrupti iure illo ducimus quaerat illum porro.
+                  Tempora vel cum quas doloremque aliquam?
+                </p>
+              </div>
+              <div class="portfolio-text-wrap">
+                <h2 class="item-title">Online Courses</h2>
+                <p class="item-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <div class="portfolio-desc-wrap">
+                <img
+                  src="./img/img-7.jpg"
+                  width="360"
+                  alt="Instagram Stories Concept"
+                />
+                <p class="portfolio-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam
+                  delectus nulla autem ut eaque mollitia!
+                </p>
+              </div>
+              <div class="portfolio-text-wrap">
+                <h2 class="item-title">Instagram Stories Concept</h2>
+                <p class="item-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <div class="portfolio-desc-wrap">
+                <img src="./img/img-8.jpg" width="360" alt="Organic Food" />
+                <p class="portfolio-item-desc">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Quasi ipsa a minima nostrum fugiat sapiente architecto qui
+                  voluptatem accusamus ut culpa quam, neque id hic cumque
+                  delectus. Totam rerum distinctio iusto amet sint ipsum,
+                  aliquid in explicabo sit quidem aperiam, officia quod
+                  obcaecati similique animi numquam fugiat, maiores iste neque
+                  dolorem soluta perspiciatis. Enim reprehenderit animi
+                  laboriosam blanditiis ex. Praesentium magnam autem minima vero
+                  error libero molestiae consequatur ipsam consectetur!
+                </p>
+              </div>
+              <div class="portfolio-text-wrap">
+                <h2 class="item-title">Organic Food</h2>
+                <p class="item-text">Web Site</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <div class="portfolio-desc-wrap">
+                <img src="./img/img-9.jpg" width="360" alt="Fresh Coffee" />
+                <p class="portfolio-item-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit,
+                  dignissimos.
+                </p>
+              </div>
+              <div class="portfolio-text-wrap">
+                <h2 class="item-title">Fresh Coffee</h2>
+                <p class="item-text">Web Site</p>
+              </div>
+            </li>
+          </ul>
         </div>
-        <div class="portfolio-text-wrap">
-        <h2 class="item-title">Banking App Interface Concept</h2>
-        <p class="item-text">App</p>
-        </div>
-    </li>
-    <li class="portfolio-item">
-        <div class="portfolio-desc-wrap">
-            <img src="./img/img-2.jpg" width="360" alt="Cashless Payment">
-            <p class="portfolio-item-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, modi.</p>
-        </div>
-        <div class="portfolio-text-wrap">
-        <h2 class="item-title">Cashless Payment</h2>
-        <p class="item-text">Marketing</p>
-        </div>
-    </li>
-    <li class="portfolio-item">
-        <div class="portfolio-desc-wrap">
-            <img src="./img/img-3.jpg" width="360" alt="Meditaion App">
-            <p class="portfolio-item-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem quis modi est, perspiciatis molestias odit voluptate sed hic mollitia voluptates!</p>
-        </div>
-        <div class="portfolio-text-wrap">
-        <h2 class="item-title">Meditaion App</h2>
-        <p class="item-text">App</p>
-        </div>
-    </li>
-    <li class="portfolio-item">
-        <div class="portfolio-desc-wrap">
-            <img src="./img/img-4.jpg" width="360" alt="Taxi Service">
-            <p class="portfolio-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro reiciendis eligendi hic laudantium fugit quidem.</p>
-        </div>
-        <div class="portfolio-text-wrap">
-        <h2 class="item-title">Taxi Service</h2>
-        <p class="item-text">Marketing</p>
-        </div>
-    </li>
-    <li class="portfolio-item">
-        <div class="portfolio-desc-wrap">
-            <img src="./img/img-5.jpg" width="360" alt="Screen Illustrations">
-            <p class="portfolio-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut odit quaerat, corrupti aspernatur possimus nemo architecto. Illo omnis, quo mollitia aut consectetur culpa esse quidem cum ipsum ea, placeat ut?</p>
-        </div>
-        <div class="portfolio-text-wrap">
-        <h2 class="item-title">Screen Illustrations</h2>
-        <p class="item-text">Design</p>
-        </div>
-    </li>
-    <li class="portfolio-item">
-        <div class="portfolio-desc-wrap">
-            <img src="./img/img-6.jpg" width="360" alt="Online Courses">
-            <p class="portfolio-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus assumenda doloribus hic magni aperiam necessitatibus atque eveniet dicta asperiores, consequatur corporis eos nam qui quasi dignissimos eaque incidunt blanditiis soluta veniam? Tenetur, doloribus ab eius, aliquam excepturi corrupti iure illo ducimus quaerat illum porro. Tempora vel cum quas doloremque aliquam?</p>
-        </div>
-        <div class="portfolio-text-wrap">
-        <h2 class="item-title">Online Courses</h2>
-        <p class="item-text">Marketing</p>
-        </div>
-    </li>
-    <li class="portfolio-item">
-        <div class="portfolio-desc-wrap">
-            <img src="./img/img-7.jpg" width="360" alt="Instagram Stories Concept">
-            <p class="portfolio-item-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam delectus nulla autem ut eaque mollitia!</p>
-        </div>
-        <div class="portfolio-text-wrap">
-        <h2 class="item-title">Instagram Stories Concept</h2>
-        <p class="item-text">Design</p>
-        </div>
-    </li>
-    <li class="portfolio-item">
-        <div class="portfolio-desc-wrap">
-            <img src="./img/img-8.jpg" width="360" alt="Organic Food">
-            <p class="portfolio-item-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi ipsa a minima nostrum fugiat sapiente architecto qui voluptatem accusamus ut culpa quam, neque id hic cumque delectus. Totam rerum distinctio iusto amet sint ipsum, aliquid in explicabo sit quidem aperiam, officia quod obcaecati similique animi numquam fugiat, maiores iste neque dolorem soluta perspiciatis. Enim reprehenderit animi laboriosam blanditiis ex. Praesentium magnam autem minima vero error libero molestiae consequatur ipsam consectetur!</p>
-        </div>
-        <div class="portfolio-text-wrap">
-        <h2 class="item-title">Organic Food</h2>
-        <p class="item-text">Web Site</p>
-        </div>
-    </li>
-    <li class="portfolio-item">
-        <div class="portfolio-desc-wrap">
-            <img src="./img/img-9.jpg" width="360" alt="Fresh Coffee">
-            <p class="portfolio-item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, dignissimos.</p>
-        </div>
-        <div class="portfolio-text-wrap">
-        <h2 class="item-title">Fresh Coffee</h2>
-        <p class="item-text">Web Site</p>
-        </div>
-    </li>
-  </ul>
-  </div>
-  </section>
+      </section>
     </main>
 
     <footer class="footer">
@@ -161,32 +226,46 @@
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a href="https://www.instagram.com/" target="_blank"
-                ><svg class="team-social-icon" width="16" height="16">
+                ><svg class="team-social-icon" width="24" height="24">
                   <use href="./img/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="https://www.facebook.com/" target="_blank"
-                ><svg class="team-social-icon" width="16" height="16">
+                ><svg class="team-social-icon" width="24" height="24">
                   <use href="./img/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="https://www.twitter.com/" target="_blank"
-                ><svg class="team-social-icon" width="16" height="16">
+                ><svg class="team-social-icon" width="24" height="24">
                   <use href="./img/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="https://www.linkedin.com/" target="_blank"
-                ><svg class="team-social-icon" width="16" height="16">
+                ><svg class="team-social-icon" width="24" height="24">
                   <use href="./img/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
         </div>
 
-      
+        <div class="footer-third-list">
+          <h3 class="footer-title">Subscribe</h3>
+          <div class="footer-forth-list">
+            <input
+              type="email"
+              name="Email"
+              id=""
+              class="footer-input"
+              placeholder="E-mail"
+            />
+
+            <button type="submit" class="btn subscribe-btn">Subscribe</button>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
