change- mobile first

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Raleway:wght@400;500;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
     <title>hw</title>
   </head>
   <body>
@@ -69,7 +73,7 @@
                 </svg>
               </div>
 
-              <h3 class="item-title">Strategy</h3>
+              <h3 class="about-title">Strategy</h3>
               <p class="item-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -81,7 +85,7 @@
                   <use href="./img/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="item-title">Punctuality</h3>
+              <h3 class="about-title">Punctuality</h3>
               <p class="item-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -93,7 +97,7 @@
                   <use href="./img/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="item-title">Diligence</h3>
+              <h3 class="about-title">Diligence</h3>
               <p class="item-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -105,7 +109,7 @@
                   <use href="./img/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="item-title">Technologies</h3>
+              <h3 class="about-title">Technologies</h3>
               <p class="item-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -340,7 +344,9 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-first-list">
-          <a href="/" class="logo">WEB<span class="end-logo">STUDIO</span></a>
+          <a href="/" class="logo footer-logo"
+            >WEB<span class="end-logo">STUDIO</span></a
+          >
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
