--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
     <title>hw</title>
   </head>
   <body>
@@ -22,9 +25,11 @@
         <nav class="nav">
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="./index.html" class="nav-link active">Studio</a>
+              <a href="" class="nav-link active">Studio</a>
             </li>
-            <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="nav-link">Portfolio</a>
+            </li>
             <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
           </ul>
         </nav>
@@ -42,6 +47,72 @@
             </li>
           </ul>
         </address>
+        <button class="menu-open-btn" data-menu-open>
+          <svg class="menu-open-icon" width="32" height="22">
+            <use href="./img/icons.svg#icon-menu-hamburger"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mob-menu is-hidden" data-menu>
+        <div>
+          <button class="menu-close-btn" data-menu-close>
+            <svg class="menu-close-icon" width="10" height="10">
+              <use href="./img/icons.svg#icon-x"></use>
+            </svg>
+          </button>
+          <ul class="menu-list">
+            <li class="menu-item">
+              <a href="" class="menu-link about-title">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a href="" class="menu-link about-title">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a href="" class="menu-link about-title">Contacts</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="menu-contact-list">
+            <li class="menu-contact-item">
+              <a href="tel:+110001111111" class="menu-contact-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="menu-contact-item">
+              <a href="tel:+110001111111" class="menu-email-link link"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+
+          <ul class="menu-social-list">
+            <li class="team-social-item">
+              <a href="https://www.instagram.com/" target="_blank"
+                ><svg class="team-social-icon" width="24" height="24">
+                  <use href="./img/icons.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="team-social-item">
+              <a href="https://www.facebook.com/" target="_blank"
+                ><svg class="team-social-icon" width="24" height="24">
+                  <use href="./img/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="team-social-item">
+              <a href="https://www.twitter.com/" target="_blank"
+                ><svg class="team-social-icon" width="24" height="24">
+                  <use href="./img/icons.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="team-social-item">
+              <a href="https://www.linkedin.com/" target="_blank"
+                ><svg class="team-social-icon" width="24" height="24">
+                  <use href="./img/icons.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -214,7 +285,9 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-first-list">
-          <a href="/" class="logo">WEB<span class="end-logo">STUDIO</span></a>
+          <a href="/" class="logo footer-logo"
+            >WEB<span class="end-logo">STUDIO</span></a
+          >
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
@@ -267,5 +340,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/menu.js"></script>
   </body>
 </html>
