--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="nav">
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="" class="nav-link active">Studio</a>
+              <a href="./index.html" class="nav-link active">Studio</a>
             </li>
             <li class="nav-item">
               <a href="./portfolio.html" class="nav-link">Portfolio</a>
@@ -63,10 +63,12 @@
           </button>
           <ul class="menu-list">
             <li class="menu-item">
-              <a href="" class="menu-link about-title">Studio</a>
+              <a href="./index.html" class="menu-link about-title">Studio</a>
             </li>
             <li class="menu-item">
-              <a href="" class="menu-link about-title">Portfolio</a>
+              <a href="./portfolio.html" class="menu-link about-title"
+                >Portfolio</a
+              >
             </li>
             <li class="menu-item">
               <a href="" class="menu-link about-title">Contacts</a>
